--- a/class.html
+++ b/class.html
@@ -7,6 +7,7 @@
 <body>
 <script>
     class Person {
+        // 实例属性
         constructor(name , age) {
             this.name = name;
             this.age = age;
@@ -14,15 +15,30 @@
                 console.log(this.name, this.age);
             }
         }
-        static color = 'red';
-        static like = 'eat';
+        // 静态属性
+        // static color = 'red';  // 不符合标准
+        // static like = 'eat';   // 符合标准
         static walk = function () {
             console.log('walk');
         }
+        // 添加到类的原型上
+        sing() {
+            console.log("I am sing");
+        }
     }
+    Person. color = 'red'
     let p = new Person('cht' , 10);
     console.log(p);
 
+    Person.walk(); // walk
+    console.log(Person.color, Person.like); // red eat
+
+
+    // 1. 在 ES6 中添加实例属性 必须在 构造器constructor中添加，每次通过new 创建的对象都会调用构造器方法，将参数传递给构造器。 （也可以直接在打括号中添加但是有兼容性问题）
+
+    // 2. 使用static 定义静态方法是符合ES6标准的，而使用static定义静态属性是不符合标准的（大部分浏览器中不支持：火狐等）
+
+    // 3. 直接在大括号中添加方法，是将方法添加到类的原型上
 
 </script>
 </body>
